@@ -2,6 +2,7 @@ package org.jhipster.health.service;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import io.micrometer.core.annotation.Timed;
+import jakarta.persistence.ManyToMany;
 import java.beans.IntrospectionException;
 import java.beans.PropertyDescriptor;
 import java.io.Serializable;
@@ -12,9 +13,6 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
-import java.util.stream.Collectors;
-import javax.persistence.ManyToMany;
-import org.elasticsearch.ResourceAlreadyExistsException;
 import org.jhipster.health.config.ApplicationProperties;
 import org.jhipster.health.domain.*;
 import org.jhipster.health.repository.*;
@@ -145,15 +143,11 @@ public class ElasticsearchIndexService implements ApplicationListener<ContextRef
     ) {
         String className = entityClass.getSimpleName();
         elasticsearchOperations.indexOps(entityClass).delete();
-        try {
-            elasticsearchOperations.indexOps(entityClass).createWithMapping();
-        } catch (ResourceAlreadyExistsException e) {
-            // Do nothing. Index was already concurrently recreated by some other service.
-        }
+        elasticsearchOperations.indexOps(entityClass).createWithMapping();
+
         if (jpaRepository.count() > 0) {
             // if a JHipster entity field is the owner side of a many-to-many relationship, it should be loaded manually
-            List<Method> relationshipGetters = Arrays
-                .stream(entityClass.getDeclaredFields())
+            List<Method> relationshipGetters = Arrays.stream(entityClass.getDeclaredFields())
                 .filter(field -> field.getType().equals(Set.class))
                 .filter(field -> field.getAnnotation(ManyToMany.class) != null)
                 .filter(field -> field.getAnnotation(ManyToMany.class).mappedBy().isEmpty())
@@ -172,7 +166,7 @@ public class ElasticsearchIndexService implements ApplicationListener<ContextRef
                     }
                 })
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
             int size = 100;
             for (int i = 0; i <= jpaRepository.count() / size; i++) {
